--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ button {
 
 a:hover {
     text-decoration: none;
+    font-weight: bold;
     cursor: pointer;
 }
 
@@ -122,10 +123,6 @@ a:hover {
 .d-bloc .a-btn,
 .d-bloc .navbar a,
 .d-bloc .navbar-brand,
-.d-bloc a .icon-sm,
-.d-bloc a .icon-md,
-.d-bloc a .icon-lg,
-.d-bloc a .icon-xl,
 .d-bloc h1 a,
 .d-bloc h2 a,
 .d-bloc h3 a,
@@ -134,6 +131,13 @@ a:hover {
 .d-bloc h6 a,
 .d-bloc p a {
     color: rgba(255, 255, 255, .6);
+}
+
+.d-bloc a .icon-sm,
+.d-bloc a .icon-md,
+.d-bloc a .icon-lg,
+.d-bloc a .icon-xl {
+    color: #000000;
 }
 
 .d-bloc .a-btn:hover,
@@ -366,7 +370,7 @@ a:hover {
     .site-navigation {
         position: absolute;
         top: 50%;
-        left: 80%;
+        left: 75%;
         transform: translate(0, -50%);
         -webkit-transform: translateY(-50%);
     }
@@ -436,6 +440,8 @@ nav .caret {
 }
 
 .mg-md {
+    margin-left: auto;
+    margin-right: auto;
     margin-top: 10px;
     margin-bottom: 20px;
 }
@@ -705,7 +711,7 @@ p {
 }
 
 h2 {
-    font-size: 22px;
+    font-size: 20px;
     line-height: 1.4em;
 }
 
@@ -737,6 +743,10 @@ h4 {
 
 .white {
     color: #FFFFFF!important;
+}
+
+.black {
+    color: #000000!important;
 }
 
 .portfolio-thumb {
@@ -780,7 +790,7 @@ h4 {
 
 .btn-atomic-tangerine {
     background: #F3976C;
-    color: #FFFFFF!important;
+    color: #000000!important;
 }
 
 .btn-atomic-tangerine:hover {
@@ -1025,6 +1035,11 @@ h4 {
     .blocsapp-device-iphone5 img {
         width: 180px;
         height: 320px;
+    }
+    .social {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
     }
 }
 
