--- a/style.css
+++ b/style.css
@@ -773,11 +773,11 @@ h4 {
 }
 
 .bgc-white {
-    background-color: #FFFFFF;
+    background-color: #a38c8c;
 }
 
 .bgc-dark-slate-blue {
-    background-color: #364577;
+    background-color: #FFFFFF;
 }
 
 .bgc-atomic-tangerine {
