--- a/style.css
+++ b/style.css
@@ -657,7 +657,7 @@ label,
 a {
     font-family: "helvetica";
     font-weight: 400;
-    color: #575757!important;
+    color: #000000!important;
 }
 
 .container {
@@ -712,6 +712,7 @@ p {
 
 h2 {
     font-size: 20px;
+    font-weight: bold;
     line-height: 1.4em;
 }
 
@@ -777,7 +778,7 @@ h4 {
 }
 
 .bgc-dark-slate-blue {
-    background-color: #FFFFFF;
+    background-color: #364577;
 }
 
 .bgc-atomic-tangerine {
