--- a/style.css
+++ b/style.css
@@ -451,6 +451,10 @@ nav .caret {
     margin-bottom: 40px;
 }
 
+#bloc-5-cta h2 {
+    font-weight: bold;
+}
+
 .btn {
     margin: 0 5px 5px 0;
 }
@@ -712,7 +716,6 @@ p {
 
 h2 {
     font-size: 20px;
-    font-weight: bold;
     line-height: 1.4em;
 }
 
